integration-tests/tests/integration/snapshots/integration__record_replay__version_incompat_too_new_major__run_rerun.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&out.stderr_as_str(), temp_root)"
---
info: experimental features enabled: setup-scripts, wrapper-scripts, benchmarks
error: run 84000001-0000-0000-0000-000000000001 has incompatible store format: recording has major version 9999, but this nextest only supports version 3 (upgrade nextest to replay this recording)
